# colorhug-als-hardware

./: Makefile.am  hardware.pcb  hardware.sch
symbols/: Makefile.am  PIC16F1454.tsym  PlugUSB.tsym  TCS3200.tsym
